# django4-by-example-study

./: .gitignore
bookmarks/: pyproject.toml
bookmarks/account/: authentication.py  forms.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py
bookmarks/config/: settings.py  urls.py
bookmarks/templates/: base.html
bookmarks/templates/account/: dashboard.html  edit.html  logged_out.html  login.html  register.html  register_done.html
bookmarks/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
mysite/: pyproject.toml
mysite/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
mysite/blog/templatetags/: blog_tags.py
mysite/config/: settings.py  urls.py
mysite/templates/: pagination.html
mysite/templates/blog/: base.html
mysite/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
