[project]
name = "bookmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.1",
    "django-debug-toolbar>=6.1.0",
    "django-extension>=0.1.0",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.13",
]
