[project]
name = "bookmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.1",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pyopenssl>=25.3.0",
    "ruff>=0.14.13",
    "social-auth-app-django>=5.7.0",
    "werkzeug>=3.1.5",
]
